[gd_scene load_steps=17 format=3 uid="uid://cnbw0veqxh4y"]

[ext_resource type="Script" path="res://Assets/Base/Curiosity/Curiosity.gd" id="1_37qy4"]
[ext_resource type="Texture2D" uid="uid://hhxch26uhqyu" path="res://icon.svg" id="2_5pqon"]
[ext_resource type="Texture2D" uid="uid://r03sifsygrob" path="res://Assets/Base/Curiosity/Sound.png" id="2_8iaec"]
[ext_resource type="Material" uid="uid://d33cknvg7wsvs" path="res://Assets/Base/Shaders/Dither.tres" id="2_yjjma"]
[ext_resource type="Texture2D" uid="uid://cg61qgn7ckjok" path="res://Assets/Base/Curiosity/circle.png" id="4_6s784"]

[sub_resource type="ViewportTexture" id="ViewportTexture_f4b1d"]
viewport_path = NodePath("Sprite2D/SubViewport")

[sub_resource type="Gradient" id="Gradient_rtatl"]
offsets = PackedFloat32Array(0, 0.75, 1)
colors = PackedColorArray(1, 1, 100, 1, 1, 1, 100, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_23y6m"]
gradient = SubResource("Gradient_rtatl")

[sub_resource type="Curve" id="Curve_we5u8"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 0.982321), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_tfayl"]
curve = SubResource("Curve_we5u8")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_yhekn"]
particle_flag_disable_z = true
gravity = Vector3(0, 0, 0)
scale_min = 4.0
scale_max = 4.0
scale_curve = SubResource("CurveTexture_tfayl")
color_ramp = SubResource("GradientTexture1D_23y6m")

[sub_resource type="Curve" id="Curve_b52a4"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_cl5j3"]
curve = SubResource("Curve_b52a4")

[sub_resource type="Curve" id="Curve_87gm1"]
max_value = 64.0
bake_resolution = 64
_data = [Vector2(0, 64), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_6sq3y"]
curve = SubResource("Curve_87gm1")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_dtcjs"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 256.0
spread = 180.0
initial_velocity_max = 64.0
velocity_limit_curve = SubResource("CurveTexture_6sq3y")
scale_max = 6.0
scale_curve = SubResource("CurveTexture_cl5j3")
color = Color(1, 1, 1, 0.1)
color_ramp = SubResource("GradientTexture1D_23y6m")

[node name="Curiousity" type="Node2D"]
script = ExtResource("1_37qy4")

[node name="Sprite2D2" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_5pqon")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 8
y_sort_enabled = true
material = ExtResource("2_yjjma")
scale = Vector2(8, 8)
texture = SubResource("ViewportTexture_f4b1d")

[node name="SubViewport" type="SubViewport" parent="Sprite2D"]
transparent_bg = true
size = Vector2i(256, 256)
size_2d_override = Vector2i(1024, 1024)
size_2d_override_stretch = true

[node name="SoundParticles" type="GPUParticles2D" parent="Sprite2D/SubViewport"]
visible = false
self_modulate = Color(0.5, 0.5, 0.5, 1)
position = Vector2(512, 512)
amount = 6
process_material = SubResource("ParticleProcessMaterial_yhekn")
texture = ExtResource("2_8iaec")
speed_scale = 0.2
visibility_rect = Rect2(-512, -512, 1024, 1024)

[node name="SmellParticles" type="GPUParticles2D" parent="Sprite2D/SubViewport"]
visible = false
self_modulate = Color(0.5, 0.5, 0.5, 1)
position = Vector2(512, 512)
amount = 256
amount_ratio = 0.25
process_material = SubResource("ParticleProcessMaterial_dtcjs")
texture = ExtResource("4_6s784")
lifetime = 2.0
speed_scale = 0.2
visibility_rect = Rect2(-512, -512, 1024, 1024)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
